@@ -12,5 +12,21 @@
 """
 
 import scaffold
+from scaffold import TestCase
 
 from reportbug import hiermatch
+
+test_strings_list = ['Beautiful is better than ugly.',
+                     'Explicit is better than implicit.',
+                     'Simple is better than complex.',
+                     'Complex is better than complicated.']
+
+
+class Test_egrep_list(TestCase):
+    """Test cases for 'egrep_list' """
+
+    def test_it_works(self):
+        """ Should return '4' matches """
+        counts = hiermatch.egrep_list(test_strings_list, 'better')
+        
+        self.failUnlessEqual(len(counts), 4, "Not 4 matches")
