@@ -7,8 +7,11 @@ reportbug (3.99.2) UNRELEASED; urgency=low
   * share/{handle_bugscript, presubj, reportbug.el, script}, setup.py
     - moved files installed in /usr/share/... into share/ to clean up top level
       directory
+  * reportbug/test_hiermatch.py, test/test_hiermatch.py
+    - removed reportbug/test_hiermatch.py, partially merget into
+      test/test_hiermatch.py
 
- -- Sandro Tosi <morph@debian.org>  Thu, 15 Jan 2009 13:19:44 +0100
+ -- Sandro Tosi <morph@debian.org>  Fri, 16 Jan 2009 10:01:29 +0100
 
 reportbug (3.99.1) experimental; urgency=low
 
